setup-scripts/65-nextcloud/nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: nextcloud
spec:
  ingressClassName: nginx
  tls:
    - secretName: nextcloud-ssl
      hosts:
      - images.vps-2.cluster-4.de          
  rules:
  - host: "images.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nextcloud
              port:
                number: 8080
